[gd_scene load_steps=11 format=3 uid="uid://cn4uyancteish"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_a6t5q"]
[ext_resource type="Texture2D" uid="uid://k58pvqu00nth" path="res://assets/background idea 3.jpg" id="2_at0kb"]
[ext_resource type="PackedScene" uid="uid://d1c6ixrpahnda" path="res://scenes/overlays/pause_menu.tscn" id="3_hexct"]
[ext_resource type="PackedScene" uid="uid://dxsptite5u0c0" path="res://assets/character assets/character test.tscn" id="4_04kye"]
[ext_resource type="PackedScene" uid="uid://cu20wn0ny8kn4" path="res://scenes/overlays/lose_screen.tscn" id="4_r7gkh"]
[ext_resource type="PackedScene" uid="uid://cfbf7dn04kvg6" path="res://scenes/overlays/input_stop.tscn" id="5_vhlft"]
[ext_resource type="PackedScene" uid="uid://cix0bkb8n46m" path="res://scenes/overlays/win_screen.tscn" id="6_e1ulk"]
[ext_resource type="PackedScene" uid="uid://cuyd1qv0pn26e" path="res://addons/midi/MidiPlayer.tscn" id="8_cvqey"]
[ext_resource type="PackedScene" uid="uid://bavriggd1q3nm" path="res://scenes/note.tscn" id="9_45uqw"]

[sub_resource type="GDScript" id="GDScript_77pu6"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="tutorial" type="Node2D"]
script = ExtResource("1_a6t5q")

[node name="bg" type="Sprite2D" parent="."]
visible = false
position = Vector2(959, 541)
scale = Vector2(3.2, 3.2)
texture = ExtResource("2_at0kb")

[node name="tutorial_enemy" parent="." instance=ExtResource("4_04kye")]
position = Vector2(1405, 740)

[node name="Label" parent="tutorial_enemy" index="2"]
metadata/_edit_use_anchors_ = true

[node name="healthbar" parent="tutorial_enemy" index="3"]
metadata/_edit_use_anchors_ = true

[node name="healthlabel" parent="tutorial_enemy" index="4"]
metadata/_edit_use_anchors_ = true

[node name="pause" type="Button" parent="."]
offset_left = 20.0
offset_top = 16.0
offset_right = 94.0
offset_bottom = 88.0
text = "pause"
script = SubResource("GDScript_77pu6")

[node name="Label" type="Label" parent="."]
offset_left = 779.0
offset_top = 675.0
offset_right = 1268.0
offset_bottom = 741.0
text = "i can't hurt you yet you can hurt me :(
(not coded in yet)"

[node name="pause_menu" parent="." instance=ExtResource("3_hexct")]

[node name="lose_screen" parent="." instance=ExtResource("4_r7gkh")]

[node name="win_screen" parent="." instance=ExtResource("6_e1ulk")]

[node name="input_stop" parent="." instance=ExtResource("5_vhlft")]
visible = false

[node name="Timer" type="Timer" parent="."]

[node name="MidiPlayerEnemy" parent="." instance=ExtResource("8_cvqey")]
file = "res://test-enemy.mid"
playing = true
loop = true
load_all_voices_from_soundfont = false

[node name="MidiPlayerPlayer" parent="." instance=ExtResource("8_cvqey")]
file = "res://test-player.mid"
playing = true
loop = true
load_all_voices_from_soundfont = false

[node name="Label2" type="Label" parent="."]
offset_left = 301.0
offset_top = 89.0
offset_right = 1678.0
offset_bottom = 205.0
text = "top track uses whatever on the right side of the keyboard
bottom track uses whatever on the left side of the keyboard"
horizontal_alignment = 1

[node name="Note" parent="." instance=ExtResource("9_45uqw")]
position = Vector2(1318, 435)

[node name="Note2" parent="." instance=ExtResource("9_45uqw")]
position = Vector2(642, 440)

[connection signal="dead" from="tutorial_enemy" to="." method="_on_character_body_2d_dead"]
[connection signal="hit" from="tutorial_enemy" to="." method="_on_tutorial_enemy_hit"]
[connection signal="pressed" from="pause" to="." method="pause"]
[connection signal="pressed" from="pause_menu/continue" to="." method="unpause"]
[connection signal="pressed" from="pause_menu/quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="pause_menu/Timer" to="pause_menu" method="_on_timer_timeout"]
[connection signal="pressed" from="lose_screen/to_level_select" to="." method="_on_to_level_select_pressed"]
[connection signal="pressed" from="win_screen/to_level_select" to="." method="_on_to_level_select_pressed"]
[connection signal="midi_event" from="MidiPlayerEnemy" to="." method="_on_midi_player_midi_event"]
[connection signal="midi_event" from="MidiPlayerPlayer" to="." method="_on_midi_player_2_midi_event"]

[editable path="tutorial_enemy"]
[editable path="pause_menu"]
[editable path="lose_screen"]
[editable path="win_screen"]
